# stack-machine

./: README.md  pyproject.toml  stack_machine.py
